--- a/WS4_Excercise.ipynb
+++ b/WS4_Excercise.ipynb
@@ -6,9 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pip install pandas\n",
+    "#pip install matplotlib\n",
+    "#pip install seaborn\n",
+    "#pip install sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import matplotlib as plt\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import sqlalchemy as sql"
